# multi-deep-research-mcp

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TEST-SCRIPT-README.md  package-lock.json  package.json  test-mcp.sh  tsconfig.json
.claude/: ARCHITECTURE.md  PYTHON_MIGRATION_PLAN.md  PYTHON_SCRIPTS_SUMMARY.md  SKILLS_INTEGRATION.md  SKILLS_README.md
.claude/skills/: README.md
.claude/skills/deep-research/: EXAMPLES.md  HOW_TO_CALL.md  REFERENCE.md  SETUP.md  SKILL.md  USAGE.md  pyproject.toml
.claude/skills/deep-research/scripts/: __init__.py  research.py
.claude/skills/deep-research/scripts/providers/: deepseek.py  openai.py
.claude/skills/deep-research/src/deep_research/providers/: deepseek.py
.claude/skills/deep-research/src/deep_research/shared/: base.py
.claude/skills/deep-research/src/deep_research_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
outputs/: providers.json
scripts/: install.sh  mcp-stdio-sanitize.mjs  multi_deep_research_cli_agent.sh  test-litellm-catalog.ts
src/: cli.ts  constants.ts  handlers.ts  server.ts
src/clients/: BaseAPIClient.ts  DeepSeekClient.ts  OpenAIClient.ts
src/providers/: deepseek.ts  index.ts  openai.ts  types.ts
src/utils/: helpers.ts  litellmCatalog.ts
test-outputs/20251217_002317/: 1_20251217_002317_list_tools_request.json  1_20251217_002317_list_tools_response.json
test-outputs/20251217_002616/: 1_20251217_002711_list_providers_request.json  2_20251217_002839_list_providers_request.json  3_20251217_002932_list_models_request.json
tests/: test-suite.js
(+41 files in other folders)
